# coffee-logger

./: Cargo.toml  Dioxus.toml  Taskfile.yml
assets/: tailwind.css
src/: assets.rs  main.rs
src/components/: header.rs  mod.rs  navbar.rs
src/models/: brewer.rs  coffee.rs  mod.rs
src/svgs/: mod.rs
